# SmartScrapeV8

./: .env.example  .gitignore  README.md  honey.html  main.py  pyproject.toml  requirements.txt  sample_input.txt  suj.html  suj.txt
input/: 55haitao.xlsx  retailmenot.xlsx
scripts/: setup_env.py
src/smart_scrape/: __init__.py  config.py  logging_config.py  metrics.py  pipeline.py
src/smart_scrape/batch/: __init__.py  excel_batch.py
src/smart_scrape/processor/: __init__.py  base_extractor.py  deal_extractor.py  generic_extractor.py  models.py  ranking.py  registry.py
src/smart_scrape/qa/: __init__.py  llm_client.py
src/smart_scrape/rendering/: __init__.py  base.py  csv_renderer.py  json_renderer.py  text.py
src/smart_scrape/scraper/: __init__.py  exceptions.py  extractor.py  models.py  playwright_client.py
tests/: conftest.py  test_batch.py  test_deal_extractor.py  test_extractor.py  test_golden.py  test_rendering.py
tests/golden/: retailmenot_golden.html  retailmenot_golden.json
